devhub-tools/main/default/objects/Contact/fields/Community_Bio__c.field-meta.xml
<CustomField>
    <fullName>Community_Bio__c</fullName>
    <description>Short bio for the community member profile.</description>
    <label>Community Bio</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>