devhub-tools/main/default/objects/Contact/fields/Community_Password_Hash__c.field-meta.xml
<CustomField>
    <fullName>Community_Password_Hash__c</fullName>
    <description>SHA-256 hash of the community member password. Never stores plaintext.</description>
    <label>Community Password Hash</label>
    <length>255</length>
    <type>Text</type>
</CustomField>