devhub-tools/main/default/objects/Contact/fields/Community_Post_Count__c.field-meta.xml
<CustomField>
    <fullName>Community_Post_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of community posts by this member.</description>
    <label>Post Count</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>