devhub-tools/main/default/objects/Contact/fields/Community_Solution_Count__c.field-meta.xml
<CustomField>
    <fullName>Community_Solution_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of accepted solutions provided by this member.</description>
    <label>Solutions</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>