devhub-tools/main/default/objects/Contact/fields/Community_Token__c.field-meta.xml
<CustomField>
    <fullName>Community_Token__c</fullName>
    <description>Session token or email verification token for community auth.</description>
    <label>Community Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>