devhub-tools/main/default/objects/Contact/fields/Community_Token_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Community_Token_Expiry__c</fullName>
    <description>Expiration datetime for the community session or verification token.</description>
    <label>Community Token Expiry</label>
    <type>DateTime</type>
</CustomField>