devhub-tools/main/default/objects/Contact/fields/Community_Verified__c.field-meta.xml
<CustomField>
    <fullName>Community_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether this contact has verified their email for community access.</description>
    <label>Community Verified</label>
    <type>Checkbox</type>
</CustomField>