devhub-tools/main/default/objects/Contact/fields/Last_Community_Login__c.field-meta.xml
<CustomField>
    <fullName>Last_Community_Login__c</fullName>
    <description>Last time this member logged into the community.</description>
    <label>Last Community Login</label>
    <type>DateTime</type>
</CustomField>